testsuite/poke.pkl/strings-esc-diag-4.pk
/* { dg-do compile } */

/* Invalid octal \-sequence */

defvar s = "\400"; /* { dg-error "" } */
